# ofd_extractor

./: CMakeLists.txt  file_misc.cpp  file_misc.h  ofd_demo.cpp  ofd_demo.h  ofd_samples.rar  xml_reader.cpp  xml_reader.h
lib/: minizip.lib
